--- a/drone-delights/src/components/Cart/CartItemCard/CartItemCard.css
+++ b/drone-delights/src/components/Cart/CartItemCard/CartItemCard.css
@@ -27,7 +27,7 @@
   width: 100%;
   height: 7.437rem;
   border-radius: 25px 0 0 25px;
-  background-color: white;
+  background-color: var(--c5);
   z-index: 0;
 }
 
@@ -77,7 +77,7 @@
   justify-content: space-between;
   width: 6.375rem;
   height: 2.125rem;
-  background-color: white;
+  background-color: var(--c5);
   border-radius: 25px;
   border: 1px solid #cccccc;
 }
@@ -111,28 +111,28 @@
 }
 
 .cart-item-trash-icon {
-  color: #fe6d73;
+  color: var(--cBad);
 }
 
 .cart-item-minus-icon {
-  color: #fe6d73;
+  color: var(--cBad);
 }
 
 .cart-item-plus-icon {
-  color: #17c3b2;
+  color: var(--cGood);
 }
 
 .cart-item-quantity {
-  font-family: "Roboto", system-ui;
+  font-family: var(--f3)
 }
 
-@media (max-width: 768px) {
+@media (max-width: 650px) {
   .cart-item-info-container{
     justify-content: none;
   }
 
   .cart-item-middle-right-container {
-    flex-direction: column;
+    flex-direction: column-reverse;
     height: 100%;
     align-items: flex-end;
     justify-content: space-between;
