--- a/drone-delights/src/components/Cart/CartTotal/CartTotal.css
+++ b/drone-delights/src/components/Cart/CartTotal/CartTotal.css
@@ -3,6 +3,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 1.875rem;
     width: 100%;
 }
