--- a/drone-delights/src/components/Home/MostOrderedItemsList/MostOrderedItemsList.css
+++ b/drone-delights/src/components/Home/MostOrderedItemsList/MostOrderedItemsList.css
@@ -1,5 +1,5 @@
 .most-ordered-title{
-    font-family: "Hachi Maru Pop", cursive;
+    font-family: var(--f2)
 }
 
 .most-ordered-container {
@@ -17,7 +17,7 @@
     width: 100%;
     overflow-y: auto;
     scrollbar-width: thin;
-    scrollbar-color: #17c3b2 transparent;
+    scrollbar-color: var(--c3) transparent;
     cursor: ew-resize;
 }
 
