--- a/drone-delights/src/components/Layout/Header/Header.css
+++ b/drone-delights/src/components/Layout/Header/Header.css
@@ -5,8 +5,8 @@
   max-width: 1240px;
   margin: 0 auto;
   height: var(--header-height);
-  font-family: "Knewave", system-ui;
-  background-color: #fef9ef;
+  font-family: var(--f1);
+  background-color: var(--c0);
   padding: 0 1.25rem;
   position: fixed;
   user-select: none;
@@ -41,14 +41,6 @@
   gap: 0.625rem;
 }
 
-.drone {
-  color: #227c9d;
-}
-
-.delights {
-  color: #fe6d73;
-}
-
 .header-btns-container {
   display: flex;
   justify-content: center;
@@ -60,18 +52,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 44px;
-  height: 44px;
+  width: 2.75rem;
+  height: 2.75rem;
   border: none;
   position: relative;
   background-color: transparent;
-  color: #227c9d;
   text-decoration: none;
 }
 
 .basket-icon {
-  color: #227c9d;
-  font-size: 34px;
+  color: var(--c1);
+  font-size: 2.125rem;
 }
 
 .basket-counter-container {
@@ -81,22 +72,22 @@
   align-items: center;
   top: -6px;
   right: -6px;
-  width: 22px;
-  height: 22px;
+  width: 1.375rem;
+  height: 1.375rem;
   border-radius: 50%;
-  font-family: "Roboto", sans-serif;
+  font-family: var(--f3);
   font-weight: bold;
-  background-color: #fe6d73;
-  color: white;
+  background-color: var(--c2);
+  color: var(--c5);
 }
 
 .hide {
   display: none;
 }
 
-.all-header-btns-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+.all-header-btns-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
