--- a/drone-delights/src/components/Order/OrderConfirmation/OrderConfirmation.css
+++ b/drone-delights/src/components/Order/OrderConfirmation/OrderConfirmation.css
@@ -5,7 +5,7 @@
   justify-content: center;
   gap: clamp(1.5rem, 5vw, 3.125rem);
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.507);
+  background-color: #ffffff81;
   border-radius: 25px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-top: 1px solid #bfbfbf;
