--- a/drone-delights/src/styles/FormStyles.css
+++ b/drone-delights/src/styles/FormStyles.css
@@ -152,6 +152,13 @@
   gap: 5px;
 }
 
+.form-error{
+  color: var(--cBad);
+  align-self: center;
+  font-size: clamp(0.5rem, 2vw, 0.8rem);
+  font-family: var(--f2);
+}
+
 @media (max-width: 768px) {
   .form-inputs-row-container {
     flex-direction: column;
