--- a/drone-delights/src/components/Cart/CartItemsList/CartItemsList.css
+++ b/drone-delights/src/components/Cart/CartItemsList/CartItemsList.css
@@ -1,3 +1,10 @@
+.cart-items-list-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 100%;
+}
+
 .cart-list-container{
     border-radius: 25px;
     overflow: hidden;
