--- a/drone-delights/src/components/Layout/UserMenu/UserMenuStyles.css
+++ b/drone-delights/src/components/Layout/UserMenu/UserMenuStyles.css
@@ -1,5 +1,6 @@
 /* USER MENU CONTAINER */
-.mobile-user-menu-container, .user-menu-container-container {
+.mobile-user-menu-container,
+.user-menu-container-container {
   position: relative;
 }
 
@@ -8,6 +9,8 @@
   display: flex;
   justify-content: center;
   align-items: baseline;
+  background-color: transparent;
+  border: none;
   gap: 1.25rem;
   cursor: pointer;
 }
@@ -20,12 +23,12 @@
 }
 
 .user-icon {
-  color: #227c9d;
+  color: var(--c1);
   font-size: 1.75rem;
 }
 
 .dropdown-icon {
-  color: #227c9d;
+  color: var(--c1);
   font-size: 1.5rem;
 }
 
@@ -38,7 +41,7 @@
   justify-content: center;
   top: clamp(3.25rem, 5vw, 3.75rem);
   right: 0;
-  background-color: #fef9ef;
+  background-color: var(--c0);
   border-radius: 0 0 12.5px 12.5px;
   padding: 1.25rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
@@ -56,15 +59,15 @@
 }
 
 .user-menu-btn-icon {
-  font-size: 22px;
-  color: #227c9d;
+  font-size: 1.375rem;
+  color: var(--c1);
 }
 
 .user-menu-btn-text {
   display: flex;
-  font-family: "Knewave", system-ui;
-  color: #fe6d73;
-  font-size: 20px;
+  font-family: var(--f1);
+  color: var(--c2);
+  font-size: 1.25rem;
   white-space: nowrap;
 }
 
