--- a/drone-delights/src/components/Menu/MenuItemsList/MenuItemsList.css
+++ b/drone-delights/src/components/Menu/MenuItemsList/MenuItemsList.css
@@ -1,7 +1,7 @@
 .item-cards-container {
   display: flex;
   justify-content: center;
-  gap: 40px;
+  gap: 2.5rem;
   width: 100%;
   padding: 4rem 8rem;
   box-sizing: border-box;
@@ -11,5 +11,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
+  gap: 2.5rem;
 }
