--- a/drone-delights/src/components/User/UserPaymentCard/UserPaymentCard.css
+++ b/drone-delights/src/components/User/UserPaymentCard/UserPaymentCard.css
@@ -28,10 +28,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 7.5rem;
-  width: clamp(6rem, 25vw, 10rem);
+  width: clamp(6rem, 25vw, 9rem);
   height: 1.875rem;
-  gap: 0.5rem;
+  gap: 1rem;
   flex-shrink: 0;
 }
 
@@ -43,17 +42,18 @@
   width: 100%;
   height: 100%;
   border: none;
-  font-family: "Roboto", system-ui;
+  font-family: var(--f3);
   font-weight: bold;
   font-size: clamp(0.6rem, 2vw, 1rem);
   padding: 0.5rem 0.5rem;
   border-radius: 12.5px;
   background-color: #00d82f;
-  color: white;
+  color: var(--c5);
 }
 
 .payment-method-card-primary-enabled {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: clamp(0.6rem, 3vw, 1rem);
 }
 
 .payment-method-card-primary-disabled {
@@ -66,8 +66,4 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #f2f2f2;
   color: #cccccc;
-}
-
-.payment-method-card-primary-text {
-  font-size: clamp(0.6rem, 2vw, 1rem);
 }
