--- a/drone-delights/src/styles/DeliveryStyles.css
+++ b/drone-delights/src/styles/DeliveryStyles.css
@@ -1,97 +1,70 @@
 .delivery-info-container {
-    width: 100%;
-    border-radius: 25px;
-    padding: 40px;
-    background-color: white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: "Hachi Maru Pop", cursive;
-  }
-  
-  .delivery-info-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 40px;
-  }
-  
-  .delivery-info-title {
-    font-size: 24px;
-    color: #404040;
-  }
-  
-  .save-address-checkbox {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-  }
-  
-  .delivery-info-form{
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-    gap: 10px;
-  }
-  
-  label {
-    font-size: 16px;
-    padding-left: 10px;
-    margin-bottom: 5px;
-    color: #7F7F7F;
-  }
-  
-  input{
-      height: 50px;
-      border-radius: 12.5px;
-      border: 1px solid #C4C4C4;
-      font-family: "Roboto", sans-serif;
-      padding-left: 10px;
-      font-size: 16px;
-      color: #666666;
-  }
-  
-  #name{
-      /* width: 250px; */
-  }
-  
-  #phone{
-      /* width: 150px; */
-  }
-  
-  #postalCode{
-      /* width: 110px; */
-  }
-  
-  #city{
-      /* width: 200px; */
-  }
-  
-  /* .submit-btn-delivery{
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-    border: none;
-    background-color: #17C3B2;
-    margin-top: 18px;
-    cursor: pointer;
-  } */
-  
-  .submit-arrow{
-    font-size: 30px;
-    color: white;
-  }
-  
-  .form-group{
-      display: flex;
-      flex-direction: column;
-  }
-  
-  .name-and-phone-container {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .postal-code-and-city-container {
-    display: flex;
-    justify-content: space-between;
-  }
-  
+  width: 100%;
+  border-radius: 25px;
+  padding: 2.5rem;
+  background-color: var(--c5);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: var(--f2);
+}
+
+.delivery-info-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 2.5rem;
+}
+
+.delivery-info-title {
+  font-size: 1.5rem;
+  color: var(--c6);
+}
+
+.save-address-checkbox {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.delivery-info-form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.25rem;
+  gap: 0.625rem;
+}
+
+label {
+  font-size: 1rem;
+  padding-left: 0.625rem;
+  margin-bottom: 0.3rem;
+  color: var(--c7);
+}
+
+input {
+  height: 3.125rem;
+  border-radius: 12.5px;
+  border: 1px solid #c4c4c4;
+  font-family: var(--f3);
+  padding-left: 0.625rem;
+  font-size: 1rem;
+  color: #666666;
+}
+
+.submit-arrow {
+  font-size: 1.875rem;
+  color: var(--c5);
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.name-and-phone-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.postal-code-and-city-container {
+  display: flex;
+  justify-content: space-between;
+}
