--- a/drone-delights/src/styles/FormStyles.css
+++ b/drone-delights/src/styles/FormStyles.css
@@ -1,10 +1,10 @@
 .form-container {
-  font-family: "Hachi Maru Pop", cursive;
+  font-family: var(--f2);
   position: relative;
   width: 100%;
   border-radius: 25px;
   padding: 2.5rem;
-  background-color: white;
+  background-color: var(--c5);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -24,10 +24,15 @@
   height: 3.125rem;
 }
 
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
 .form-title {
   font-size: clamp(1rem, 3.5vw, 1.5rem);
   padding-left: 0.625rem;
-  color: #404040;
+  color: var(--c6);
   user-select: none;
 }
 
@@ -65,32 +70,32 @@
 }
 
 .form-submit-btn {
-  font-family: "Knewave", system-ui;
+  font-family: var(--f1);
   font-weight: 400;
-  font-size: 22px;
-  height: 70px;
-  padding: 10px 20px;
-  margin-top: 18px;
-  color: white;
+  font-size: 1.375rem;
+  height: 4.375rem;
+  padding: 0.625rem 1.25rem;
+  margin-top: 1.125rem;
+  color: var(--c5);
   border: none;
   text-align: center;
-  background-color: #17c3b2;
-  border-radius: 50px;
+  background-color: var(--c3);
+  border-radius: 3.125rem;
   text-decoration: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
 
 .form-submit-btn-mini {
-  font-size: 30px;
-  color: white;
+  font-size: 1.875rem;
+  color: var(--c5);
   cursor: pointer;
-  height: 70px;
-  width: 70px;
+  height: 4.375rem;
+  width: 4.375rem;
   border-radius: 50%;
   border: none;
-  background-color: #17C3B2;
-  margin-top: 18px;
+  background-color: var(--c3);
+  margin-top: 1.125rem;
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -104,20 +109,20 @@
 }
 
 .form-submit-btn-blue {
-  background-color: #227c9d;
+  background-color: var(--c1);
 }
 
 .form-cancel-btn{
-  font-family: "Knewave", system-ui;
+  font-family: var(--f1);
   font-weight: 400;
-  font-size: 30px;
-  width: 70px;
-  height: 70px;
-  margin-top: 18px;
-  color: white;
+  font-size: 1.875rem;
+  height: 4.375rem;
+  width: 4.375rem;
+  margin-top: 1.125rem;
+  color: var(--c5);
   border: none;
   text-align: center;
-  background-color: #fe6d73;
+  background-color: var(--c2);
   border-radius: 50%;
   text-decoration: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -125,15 +130,15 @@
 }
 
 .form-cancel-btn-mini{
-  font-family: "Knewave", system-ui;
+  font-family: var(--f1);
   font-weight: 400;
-  font-size: 30px;
-  width: 50px;
-  height: 50px;
-  color: white;
+  font-size: 1.875rem;
+  width: 3.125rem;
+  height: 3.125rem;
+  color: var(--c5);
   border: none;
   text-align: center;
-  background-color: #fe6d73;
+  background-color: var(--c2);
   border-radius: 50%;
   text-decoration: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
