--- a/drone-delights/src/styles/PaymentStyles.css
+++ b/drone-delights/src/styles/PaymentStyles.css
@@ -2,14 +2,14 @@
   width: 100%;
   border-radius: 25px;
   padding: 2.5rem;
-  background-color: white;
+  background-color: var(--c5);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-family: "Hachi Maru Pop", cursive;
+  font-family: var(--f2);
 }
 
 .payment-info-title {
   font-size: 1.5rem;
-  color: #404040;
+  color: var(--c6);
 }
 
 .payment-info-form-mastercard {
@@ -23,14 +23,14 @@ label {
   font-size: 1rem;
   padding-left: 0.625rem;
   margin-bottom: 0.313rem;
-  color: #7f7f7f;
+  color: var(--c7);
 }
 
 input {
   height: 3.125rem;
   border-radius: 12.5px;
   border: 1px solid #c4c4c4;
-  font-family: "Roboto", sans-serif;
+  font-family: var(--f3);
   padding-left: 0.625rem;
   font-size: 1rem;
   color: #666666;
@@ -55,18 +55,12 @@ input {
   justify-content: center;
   align-items: center;
   border: 1px solid #c4c4c4;
-  background-color: white;
+  background-color: var(--c5);
   border-radius: 12.5px;
   width: 4rem;
   height: 2.5rem;
   opacity: 0.4;
   cursor: pointer;
-}
-
-.swish-btn {
-}
-
-.mastercard-btn {
 }
 
 .selected-btn {
@@ -85,94 +79,32 @@ input {
   height: 1.5rem;
 }
 
-/* #nameOnCard {
-  width: 100%;
-}
-
-#name {
-  width: 100%;
-}
-
-#phone {
-  width: 100%;
-}
-
-#card {
-  width: 100%;
-}
-
-#expiry,
-#expiryDate {
-  width: 100%;
-}
-
-#cvc {
-  width: 100%;
-} */
-
 .submit-btn {
-  height: 70px;
-  width: 70px;
+  height: 4.375rem;
+  width: 4.375rem;
   border-radius: 50%;
   border: none;
-  background-color: #17c3b2;
-  /* margin-top: 18px; */
+  background-color: var(--c3);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
 
 .submit-arrow {
-  font-size: 30px;
-  color: white;
-}
-
-.place-order-btn {
-  font-family: "Knewave", system-ui;
-  font-size: 22px;
-  height: 70px;
-  padding: 10px 20px;
-  margin-top: 18px;
-  color: white;
-  border: none;
-  text-align: center;
-  background-color: #17c3b2;
-  border-radius: 50px;
-  text-decoration: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-}
-
-.name-and-phone-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.postal-code-and-city-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
+  font-size: 1.875rem;
+  color: var(--c5);
 }
 
 .payment-info-form-swish {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
-  gap: 10px;
+  margin-top: 1.25rem;
+  gap: 0.625rem;
 }
 
 .swish-phone-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-#phoneSwish {
-  width: 250px;
 }
 
 .none {
@@ -182,11 +114,3 @@ input {
 .nowrap {
   white-space: nowrap;
 }
-
-/* .payment-methods-display-form {
-    display: flex;
-    flex-direction: column;
-    margin-top: 30px;
-    gap: 30px;
-  }
-   */
