--- a/drone-delights/src/App.css
+++ b/drone-delights/src/App.css
@@ -4,19 +4,19 @@
   box-sizing: border-box;
 }
 
-#root{
+#root {
   --header-height: clamp(3.75rem, 8vw, 6rem);
 
-  --c0: #FEF9EF; 
+  --c0: #fef9ef;
   --c1: #227c9d;
   --c2: #fe6d73;
-  --c3: #17C3B2;
-  --c4: #FFD899;
+  --c3: #17c3b2;
+  --c4: #ffd899;
   --c5: white;
   --c6: #404040;
-  --c7: #7F7F7F;
+  --c7: #7f7f7f;
 
-  --cGood: #17C3B2;
+  --cGood: #17c3b2;
   --cBad: #fe6d73;
 
   --f1: "Knewave";
@@ -28,9 +28,11 @@ html {
   font-size: 16px;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
-  background-color: #FEF9EF;
+  background-color: #fef9ef;
 }
 
 .app-container {
