--- a/drone-delights/src/pages/CartPage/CartPage.css
+++ b/drone-delights/src/pages/CartPage/CartPage.css
@@ -5,10 +5,10 @@
   justify-content: center;
 }
 
-.cart-page-body{
+.cart-page-body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 1.875rem;
   width: clamp(20rem, 80vw, 50rem);
 }
