--- a/drone-delights/src/styles/TypographyStyles.css
+++ b/drone-delights/src/styles/TypographyStyles.css
@@ -1,6 +1,6 @@
 /* COMPANY NAME */
 .company-name-blue, .company-name-red {
-  font-family: "Knewave", system-ui;
+  font-family: var(--f1);
   font-weight: 400;
   font-size: clamp(1.5rem, 4vw, 2.8rem);
 }
@@ -88,12 +88,6 @@
   font-family: var(--f1);
   font-size: clamp(1rem, 3vw, 1.25rem);
   color: var(--c1);
-}
-
-.menu-item-card-price {
-}
-
-.menu-item-card-description {
 }
 
 .cart-item-card-title{
