--- a/drone-delights/src/components/Home/MenuTeaser/MenuTeaser.css
+++ b/drone-delights/src/components/Home/MenuTeaser/MenuTeaser.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-left: 6.25rem;
+  margin-bottom: 1.875rem;
   width: 24rem;
   gap: 1.25rem;
 }
