--- a/drone-delights/src/styles/ButtonStyles.css
+++ b/drone-delights/src/styles/ButtonStyles.css
@@ -1,29 +1,4 @@
 /* BUTTONS */
-.full-button-blue,
-.full-button-green {
-  font-family: var(--f1);
-  font-weight: 400;
-  font-size: 1.375rem;
-  height: 4.375rem;
-  padding: 0.625rem 1.25rem;
-  color: var(--c5);
-  border: none;
-  text-align: center;
-  border-radius: 12.5px;
-  text-decoration: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
-  flex-shrink: 0;
-}
-
-/* .full-button-blue {
-  background-color: var(--c1);
-} */
-
-/* .full-button-green {
-  background-color: var(--c3);
-} */
-
 .add-button-s,
 .add-button-m,
 .add-button-l {
@@ -35,16 +10,6 @@
   background-color: var(--c3);
   flex-shrink: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.add-button-s.disabled,
-.add-button-m.disabled,
-.add-button-l.disabled {
-  opacity: 0.5;
-  pointer-events: none;
-  background-color: #bdbdbd;
-  color: var(--c5);
-  cursor: not-allowed;
 }
 
 .add-button-s {
@@ -63,6 +28,16 @@
   width: 5rem;
   height: 5rem;
   font-size: 1.875rem;
+}
+
+.add-button-s.disabled,
+.add-button-m.disabled,
+.add-button-l.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  background-color: #bdbdbd;
+  color: var(--c5);
+  cursor: not-allowed;
 }
 
 .cancel-button-s,
@@ -121,21 +96,13 @@
   height: 100%;
 }
 
-/* BUTTONLINK */
-/* .button-link {
-  font-family: var(--f1);
-  font-size: 1.375rem;
-  padding: 0.625rem 1.25rem;
-  color: var(--c2);
-  border: none;
-} */
-
 .full,
 .full-green,
 .full-blue,
 .full-green-pay,
 .return,
-.clear-all {
+.clear-all,
+.lite {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -198,6 +165,7 @@
 .lite {
   text-decoration: none;
   background-color: transparent;
+  box-shadow: none;
   color: var(--c2);
 }
 
@@ -205,7 +173,7 @@
   background-color: transparent;
   box-shadow: none;
   color: var(--c2);
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
 }
 
 .clear-all{
@@ -227,3 +195,64 @@
   border-radius: 25px;
   cursor: pointer;
 }
+
+/* HIGHTLIGHTING */
+.hl{
+  transition: transform 0.2s ease, filter 0.2s ease;
+  transform-origin: center;
+  z-index: 1;
+}
+
+.hl:hover {
+  transform: scale(1.1);
+  filter: brightness(1.1);
+}
+
+.hl:active {
+  filter: brightness(1.2);
+}
+
+.hl-icon {
+  transition: transform 0.2s ease, filter 0.2s ease;
+  transform-origin: center;
+}
+
+.hl-icon:hover {
+  transform: translateY(-50%) scale(1.2);
+  filter: brightness(1.1);
+}
+
+.hl-icon:active {
+  filter: brightness(1.2);
+}
+
+.hl-quantity{
+  transition: transform 0.2s ease, filter 0.2s ease;
+}
+
+.hl-quantity:hover {
+  transform: scale(1.2);
+  filter: brightness(1.2);
+}
+
+.hl-quantity:active {
+  filter: brightness(1.4);
+}
+
+.hl-description {
+  transition: transform 0.2s ease, filter 0.2s ease;
+}
+
+.hl-item-card:hover{
+  transform: scale(1.05);
+}
+
+.hl-filter{
+  transition: transform 0.2s ease, filter 0.2s ease;
+}
+
+.hl-filter:hover {
+  transform: scale(1.2);
+  filter: brightness(1.1);
+}
+
