--- a/drone-delights/src/components/Home/MostOrderedItemsList/MostOrderedItemsList.css
+++ b/drone-delights/src/components/Home/MostOrderedItemsList/MostOrderedItemsList.css
@@ -12,7 +12,7 @@
 .most-ordered-item-cards-container-scroll {
     display: flex;
     flex-direction: row;
-    padding: 0 3.75rem 1.25rem 1.25rem;
+    padding: 1.25rem 3.75rem 1.25rem 1.25rem;
     gap: 2.5rem;
     width: 100%;
     overflow-y: auto;
